syntax = "proto3";

package io.appium.multiplatform.model.error;

enum HttpStatusCode {
  HTTP_STATUS_UNSPECIFIED = 0; // 未指定 / Unspecified

  // 1xx — Informational
  HTTP_CONTINUE = 100;
  HTTP_SWITCHING_PROTOCOLS = 101;
  HTTP_PROCESSING = 102; // WebDAV (RFC 4918)
  HTTP_EARLY_HINTS = 103;
  HTTP_UPLOAD_RESUMPTION_SUPPORTED = 104; // TEMPORARY (IETF draft; may change/expire)

  // 2xx — Success
  HTTP_OK = 200;
  HTTP_CREATED = 201;
  HTTP_ACCEPTED = 202;
  HTTP_NON_AUTHORITATIVE_INFORMATION = 203;
  HTTP_NO_CONTENT = 204;
  HTTP_RESET_CONTENT = 205;
  HTTP_PARTIAL_CONTENT = 206;
  HTTP_MULTI_STATUS = 207; // WebDAV (RFC 4918)
  HTTP_ALREADY_REPORTED = 208; // WebDAV (RFC 5842)
  HTTP_IM_USED = 226;

  // 3xx — Redirection
  HTTP_MULTIPLE_CHOICES = 300;
  HTTP_MOVED_PERMANENTLY = 301;
  HTTP_FOUND = 302;
  HTTP_SEE_OTHER = 303;
  HTTP_NOT_MODIFIED = 304;
  HTTP_USE_PROXY = 305;
  HTTP_STATUS_306_UNUSED = 306; // Unused
  HTTP_TEMPORARY_REDIRECT = 307;
  HTTP_PERMANENT_REDIRECT = 308;

  // 4xx — Client Error
  HTTP_BAD_REQUEST = 400;
  HTTP_UNAUTHORIZED = 401;
  HTTP_PAYMENT_REQUIRED = 402;
  HTTP_FORBIDDEN = 403;
  HTTP_NOT_FOUND = 404;
  HTTP_METHOD_NOT_ALLOWED = 405;
  HTTP_NOT_ACCEPTABLE = 406;
  HTTP_PROXY_AUTHENTICATION_REQUIRED = 407;
  HTTP_REQUEST_TIMEOUT = 408;
  HTTP_CONFLICT = 409;
  HTTP_GONE = 410;
  HTTP_LENGTH_REQUIRED = 411;
  HTTP_PRECONDITION_FAILED = 412;
  HTTP_CONTENT_TOO_LARGE = 413; // RFC 9110（原 Payload Too Large）
  HTTP_URI_TOO_LONG = 414;
  HTTP_UNSUPPORTED_MEDIA_TYPE = 415;
  HTTP_RANGE_NOT_SATISFIABLE = 416;
  HTTP_EXPECTATION_FAILED = 417;
  HTTP_STATUS_418_UNUSED = 418; // Unused（RFC 9110）
  HTTP_MISDIRECTED_REQUEST = 421;
  HTTP_UNPROCESSABLE_CONTENT = 422; // RFC 9110（原 Unprocessable Entity）
  HTTP_LOCKED = 423; // WebDAV
  HTTP_FAILED_DEPENDENCY = 424; // WebDAV
  HTTP_TOO_EARLY = 425;
  HTTP_UPGRADE_REQUIRED = 426;
  HTTP_PRECONDITION_REQUIRED = 428;
  HTTP_TOO_MANY_REQUESTS = 429;
  HTTP_REQUEST_HEADER_FIELDS_TOO_LARGE = 431;
  HTTP_UNAVAILABLE_FOR_LEGAL_REASONS = 451;

  // 5xx — Server Error
  HTTP_INTERNAL_SERVER_ERROR = 500;
  HTTP_NOT_IMPLEMENTED = 501;
  HTTP_BAD_GATEWAY = 502;
  HTTP_SERVICE_UNAVAILABLE = 503;
  HTTP_GATEWAY_TIMEOUT = 504;
  HTTP_HTTP_VERSION_NOT_SUPPORTED = 505;
  HTTP_VARIANT_ALSO_NEGOTIATES = 506;
  HTTP_INSUFFICIENT_STORAGE = 507; // WebDAV
  HTTP_LOOP_DETECTED = 508; // WebDAV
  HTTP_NOT_EXTENDED = 510; // OBSOLETED
  HTTP_NETWORK_AUTHENTICATION_REQUIRED = 511;
}
